feat: definir limite de gastos por categoria

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -117,6 +117,17 @@
   "storeAnalyticsTitle": "Wo Sie Am Meisten Ausgegeben Haben",
   "storeAnalyticsSubtitle": "Ausgabenanalyse nach Geschäft",
   "averageLabel": "Durchschnitt",
+  "categoryLimitsTitle": "Kategorienlimits",
+  "categoryLimitsButton": "Limits festlegen",
+  "categoryLimitHelper": "Leer lassen für kein Limit",
+  "categoryLimitsSaved": "Limits gespeichert!",
+  "budgetStatus": "Budget",
+  "budgetOk": "Innerhalb des Limits",
+  "budgetWarning": "Warnung",
+  "budgetExceeded": "Limit überschritten",
+  "totalLimitsLabel": "Gesamtlimits:",
+  "limitsExceedSalaryWarning": "Limits überschreiten Gehalt!",
+  "limitsWithinSalary": "Limits innerhalb des Gehalts",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
