--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -128,6 +128,18 @@
   "totalLimitsLabel": "Total Limits:",
   "limitsExceedSalaryWarning": "Limits exceed salary!",
   "limitsWithinSalary": "Limits within salary",
+  "addFromFavorites": "Add from Favorites",
+  "favorites": "Favorites",
+  "mostPurchased": "Most Purchased",
+  "noFavorites": "No favorites yet",
+  "noFavoritesHint": "Mark products as favorites for quick access",
+  "noMostPurchased": "No history yet",
+  "timesSingular": "time",
+  "timesPlural": "times",
+  "addToFavorites": "Add to favorites",
+  "removeFromFavorites": "Remove from favorites",
+  "deleteSelection": "Multiple selection",
+  "importFromPreviousMonth": "Import from previous month",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
