--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -18,6 +18,7 @@
   "language": "Idioma",
   "languageSubtitle": "Escolha o idioma do app",
   "languagePortuguese": "Português (Brasil)",
+  "languagePortuguesePortugal": "Português (Portugal)",
   "languageEnglish": "Inglês",
   "languageSpanish": "Espanhol",
   "languageFrench": "Francês",
