--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,7 @@
   "language": "Language",
   "languageSubtitle": "Choose the app language",
   "languagePortuguese": "Portuguese (Brazil)",
+  "languagePortuguesePortugal": "Portuguese (Portugal)",
   "languageEnglish": "English",
   "languageSpanish": "Spanish",
   "languageFrench": "French",
