feat: melhoria do importar do mes anterior, agora pode escolher o mes

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Bitte geben Sie einen Wert ein",
   "salaryInputInvalid": "Bitte geben Sie einen gültigen Wert ein",
   "salarySaved": "Gehalt gespeichert!",
-  "importPreviousMonthTitle": "Vom Vormonat importieren",
-  "importPreviousMonthTooltip": "Produkte vom Vormonat importieren",
-  "noPreviousMonthProducts": "Keine Produkte im Vormonat gefunden",
+  "importPreviousMonthTitle": "Produkte Importieren",
+  "importPreviousMonthTooltip": "Produkte aus früheren Monaten importieren",
+  "noPreviousMonthProducts": "Keine Produkte in diesem Monat gefunden",
+  "noMonthsAvailable": "Keine Monate mit gekauften Produkten verfügbar",
+  "selectMonth": "Monat Auswählen",
   "close": "Schließen",
   "selectAll": "Alle auswählen",
   "productsImported": "Produkte importiert",
