--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Please enter a value",
   "salaryInputInvalid": "Please enter a valid value",
   "salarySaved": "Salary saved!",
-  "importPreviousMonthTitle": "Import from Previous Month",
-  "importPreviousMonthTooltip": "Import products from previous month",
-  "noPreviousMonthProducts": "No products found in previous month",
+  "importPreviousMonthTitle": "Import Products",
+  "importPreviousMonthTooltip": "Import products from previous months",
+  "noPreviousMonthProducts": "No products found in this month",
+  "noMonthsAvailable": "No months with purchased products available",
+  "selectMonth": "Select Month",
   "close": "Close",
   "selectAll": "Select All",
   "productsImported": "Products imported",
