--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Por favor, ingrese un valor",
   "salaryInputInvalid": "Por favor, ingrese un valor válido",
   "salarySaved": "¡Salario guardado!",
-  "importPreviousMonthTitle": "Importar del Mes Anterior",
-  "importPreviousMonthTooltip": "Importar productos del mes anterior",
-  "noPreviousMonthProducts": "No se encontraron productos en el mes anterior",
+  "importPreviousMonthTitle": "Importar Productos",
+  "importPreviousMonthTooltip": "Importar productos de meses anteriores",
+  "noPreviousMonthProducts": "No se encontraron productos en este mes",
+  "noMonthsAvailable": "No hay meses con productos comprados disponibles",
+  "selectMonth": "Seleccionar Mes",
   "close": "Cerrar",
   "selectAll": "Seleccionar Todos",
   "productsImported": "Productos importados",
