--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Veuillez entrer une valeur",
   "salaryInputInvalid": "Veuillez entrer une valeur valide",
   "salarySaved": "Salaire enregistré!",
-  "importPreviousMonthTitle": "Importer du Mois Précédent",
-  "importPreviousMonthTooltip": "Importer les produits du mois précédent",
-  "noPreviousMonthProducts": "Aucun produit trouvé le mois précédent",
+  "importPreviousMonthTitle": "Importer des Produits",
+  "importPreviousMonthTooltip": "Importer des produits des mois précédents",
+  "noPreviousMonthProducts": "Aucun produit trouvé dans ce mois",
+  "noMonthsAvailable": "Aucun mois avec des produits achetés disponible",
+  "selectMonth": "Sélectionner le Mois",
   "close": "Fermer",
   "selectAll": "Tout sélectionner",
   "productsImported": "Produits importés",
