--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "値を入力してください",
   "salaryInputInvalid": "有効な値を入力してください",
   "salarySaved": "給与が保存されました！",
-  "importPreviousMonthTitle": "先月からインポート",
-  "importPreviousMonthTooltip": "先月の商品をインポート",
-  "noPreviousMonthProducts": "先月に商品が見つかりませんでした",
+  "importPreviousMonthTitle": "商品をインポート",
+  "importPreviousMonthTooltip": "過去の月から商品をインポート",
+  "noPreviousMonthProducts": "この月に商品が見つかりません",
+  "noMonthsAvailable": "購入した商品がある月がありません",
+  "selectMonth": "月を選択",
   "close": "閉じる",
   "selectAll": "すべて選択",
   "productsImported": "商品がインポートされました",
