--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Proszę wprowadzić wartość",
   "salaryInputInvalid": "Proszę wprowadzić poprawną wartość",
   "salarySaved": "Wynagrodzenie zapisane!",
-  "importPreviousMonthTitle": "Importuj z Poprzedniego Miesiąca",
-  "importPreviousMonthTooltip": "Importuj produkty z poprzedniego miesiąca",
-  "noPreviousMonthProducts": "Nie znaleziono produktów w poprzednim miesiącu",
+  "importPreviousMonthTitle": "Importuj Produkty",
+  "importPreviousMonthTooltip": "Importuj produkty z poprzednich miesięcy",
+  "noPreviousMonthProducts": "Nie znaleziono produktów w tym miesiącu",
+  "noMonthsAvailable": "Brak miesięcy z zakupionymi produktami",
+  "selectMonth": "Wybierz Miesiąc",
   "close": "Zamknij",
   "selectAll": "Zaznacz wszystko",
   "productsImported": "Produkty zaimportowane",
