--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Por favor, insira um valor",
   "salaryInputInvalid": "Por favor, insira um valor válido",
   "salarySaved": "Salário salvo!",
-  "importPreviousMonthTitle": "Importar do Mês Anterior",
-  "importPreviousMonthTooltip": "Importar produtos do mês anterior",
-  "noPreviousMonthProducts": "Nenhum produto encontrado no mês anterior",
+  "importPreviousMonthTitle": "Importar Produtos",
+  "importPreviousMonthTooltip": "Importar produtos de meses anteriores",
+  "noPreviousMonthProducts": "Nenhum produto encontrado neste mês",
+  "noMonthsAvailable": "Nenhum mês com produtos comprados disponível",
+  "selectMonth": "Selecionar Mês",
   "close": "Fechar",
   "selectAll": "Selecionar Todos",
   "productsImported": "Produtos importados",
