--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Пожалуйста, введите значение",
   "salaryInputInvalid": "Пожалуйста, введите правильное значение",
   "salarySaved": "Зарплата сохранена!",
-  "importPreviousMonthTitle": "Импорт из Прошлого Месяца",
-  "importPreviousMonthTooltip": "Импортировать товары из прошлого месяца",
-  "noPreviousMonthProducts": "Товары за прошлый месяц не найдены",
+  "importPreviousMonthTitle": "Импорт Товаров",
+  "importPreviousMonthTooltip": "Импорт товаров из предыдущих месяцев",
+  "noPreviousMonthProducts": "Товары не найдены в этом месяце",
+  "noMonthsAvailable": "Нет месяцев с купленными товарами",
+  "selectMonth": "Выбрать Месяц",
   "close": "Закрыть",
   "selectAll": "Выбрать все",
   "productsImported": "Товары импортированы",
