--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "請輸入一個值",
   "salaryInputInvalid": "請輸入有效的值",
   "salarySaved": "薪資已保存！",
-  "importPreviousMonthTitle": "從上月導入",
-  "importPreviousMonthTooltip": "從上月導入產品",
-  "noPreviousMonthProducts": "上月沒有找到產品",
+  "importPreviousMonthTitle": "導入產品",
+  "importPreviousMonthTooltip": "從以前的月份導入產品",
+  "noPreviousMonthProducts": "本月未找到產品",
+  "noMonthsAvailable": "沒有包含已購買產品的月份",
+  "selectMonth": "選擇月份",
   "close": "關閉",
   "selectAll": "全選",
   "productsImported": "產品已導入",
