--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "Per favore, inserisci un valore",
   "salaryInputInvalid": "Per favore, inserisci un valore valido",
   "salarySaved": "Stipendio salvato!",
-  "importPreviousMonthTitle": "Importa dal Mese Precedente",
-  "importPreviousMonthTooltip": "Importa prodotti dal mese precedente",
-  "noPreviousMonthProducts": "Nessun prodotto trovato nel mese precedente",
+  "importPreviousMonthTitle": "Importa Prodotti",
+  "importPreviousMonthTooltip": "Importa prodotti dai mesi precedenti",
+  "noPreviousMonthProducts": "Nessun prodotto trovato in questo mese",
+  "noMonthsAvailable": "Nessun mese con prodotti acquistati disponibile",
+  "selectMonth": "Seleziona Mese",
   "close": "Chiudi",
   "selectAll": "Seleziona Tutto",
   "productsImported": "Prodotti importati",
