--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "값을 입력하세요",
   "salaryInputInvalid": "유효한 값을 입력하세요",
   "salarySaved": "급여가 저장되었습니다!",
-  "importPreviousMonthTitle": "지난달에서 가져오기",
-  "importPreviousMonthTooltip": "지난달 제품 가져오기",
-  "noPreviousMonthProducts": "지난달에 제품이 없습니다",
+  "importPreviousMonthTitle": "제품 가져오기",
+  "importPreviousMonthTooltip": "이전 달에서 제품 가져오기",
+  "noPreviousMonthProducts": "이 달에 제품을 찾을 수 없습니다",
+  "noMonthsAvailable": "구매한 제품이 있는 달이 없습니다",
+  "selectMonth": "달 선택",
   "close": "닫기",
   "selectAll": "모두 선택",
   "productsImported": "제품이 가져와졌습니다",
