--- a/lib/l10n/app_zh_Hans.arb
+++ b/lib/l10n/app_zh_Hans.arb
@@ -102,9 +102,11 @@
   "salaryInputRequired": "请输入一个值",
   "salaryInputInvalid": "请输入有效的值",
   "salarySaved": "工资已保存！",
-  "importPreviousMonthTitle": "从上月导入",
-  "importPreviousMonthTooltip": "从上月导入产品",
-  "noPreviousMonthProducts": "上月没有找到产品",
+  "importPreviousMonthTitle": "导入产品",
+  "importPreviousMonthTooltip": "从以前的月份导入产品",
+  "noPreviousMonthProducts": "本月未找到产品",
+  "noMonthsAvailable": "没有包含已购买产品的月份",
+  "selectMonth": "选择月份",
   "close": "关闭",
   "selectAll": "全选",
   "productsImported": "产品已导入",
