feat: barra de pesquisa

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "Keine Monate mit gekauften Produkten verfügbar",
   "selectMonth": "Monat Auswählen",
   "close": "Schließen",
+  "searchProducts": "Produkte suchen",
   "selectAll": "Alle auswählen",
   "productsImported": "Produkte importiert",
   "selectItemsToDelete": "Elemente zum Löschen auswählen",
