--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "No months with purchased products available",
   "selectMonth": "Select Month",
   "close": "Close",
+  "searchProducts": "Search products",
   "selectAll": "Select All",
   "productsImported": "Products imported",
   "selectItemsToDelete": "Select items to delete",
