--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "No hay meses con productos comprados disponibles",
   "selectMonth": "Seleccionar Mes",
   "close": "Cerrar",
+  "searchProducts": "Buscar productos",
   "selectAll": "Seleccionar Todos",
   "productsImported": "Productos importados",
   "selectItemsToDelete": "Seleccionar artículos para eliminar",
