--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "Aucun mois avec des produits achetés disponible",
   "selectMonth": "Sélectionner le Mois",
   "close": "Fermer",
+  "searchProducts": "Rechercher des produits",
   "selectAll": "Tout sélectionner",
   "productsImported": "Produits importés",
   "selectItemsToDelete": "Sélectionner les articles à supprimer",
