--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "Nessun mese con prodotti acquistati disponibile",
   "selectMonth": "Seleziona Mese",
   "close": "Chiudi",
+  "searchProducts": "Cerca prodotti",
   "selectAll": "Seleziona Tutto",
   "productsImported": "Prodotti importati",
   "selectItemsToDelete": "Seleziona elementi da eliminare",
