--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "구매한 제품이 있는 달이 없습니다",
   "selectMonth": "달 선택",
   "close": "닫기",
+  "searchProducts": "제품 검색",
   "selectAll": "모두 선택",
   "productsImported": "제품이 가져와졌습니다",
   "selectItemsToDelete": "삭제할 항목 선택",
