--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "Brak miesięcy z zakupionymi produktami",
   "selectMonth": "Wybierz Miesiąc",
   "close": "Zamknij",
+  "searchProducts": "Szukaj produktów",
   "selectAll": "Zaznacz wszystko",
   "productsImported": "Produkty zaimportowane",
   "selectItemsToDelete": "Wybierz elementy do usunięcia",
