--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "Nenhum mês com produtos comprados disponível",
   "selectMonth": "Selecionar Mês",
   "close": "Fechar",
+  "searchProducts": "Pesquisar produtos",
   "selectAll": "Selecionar Todos",
   "productsImported": "Produtos importados",
   "selectItemsToDelete": "Selecionar itens para eliminação",
