--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "Нет месяцев с купленными товарами",
   "selectMonth": "Выбрать Месяц",
   "close": "Закрыть",
+  "searchProducts": "Искать товары",
   "selectAll": "Выбрать все",
   "productsImported": "Товары импортированы",
   "selectItemsToDelete": "Выбрать элементы для удаления",
