--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "没有包含已购买产品的月份",
   "selectMonth": "选择月份",
   "close": "关闭",
+  "searchProducts": "搜索产品",
   "selectAll": "全选",
   "productsImported": "产品已导入",
   "selectItemsToDelete": "选择要删除的项目",
