--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -108,6 +108,7 @@
   "noMonthsAvailable": "沒有包含已購買產品的月份",
   "selectMonth": "選擇月份",
   "close": "關閉",
+  "searchProducts": "搜尋產品",
   "selectAll": "全選",
   "productsImported": "產品已導入",
   "selectItemsToDelete": "選擇要刪除的項目",
