--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Einkaufsliste",
+  "appTitle": "MeuGasto",
   "expensesTitle": "AUSGABEN",
   "settingsTitle": "Einstellungen",
   "tabBuy": "Kaufen",
