--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Shopping List",
+  "appTitle": "MeuGasto",
   "expensesTitle": "EXPENSES",
   "settingsTitle": "Settings",
   "tabBuy": "Buy",
