--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Lista de Compras",
+  "appTitle": "MeuGasto",
   "expensesTitle": "GASTOS",
   "settingsTitle": "Configuración",
   "tabBuy": "Comprar",
