--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Liste de Courses",
+  "appTitle": "MeuGasto",
   "expensesTitle": "DÉPENSES",
   "settingsTitle": "Paramètres",
   "tabBuy": "Acheter",
