--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Lista della Spesa",
+  "appTitle": "MeuGasto",
   "expensesTitle": "SPESE",
   "settingsTitle": "Impostazioni",
   "tabBuy": "Acquista",
