--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Lista zakupów",
+  "appTitle": "MeuGasto",
   "expensesTitle": "WYDATKI",
   "settingsTitle": "Ustawienia",
   "tabBuy": "Kup",
