--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Список покупок",
+  "appTitle": "MeuGasto",
   "expensesTitle": "РАСХОДЫ",
   "settingsTitle": "Настройки",
   "tabBuy": "Купить",
