--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Lista de Compras",
+  "appTitle": "MeuGasto",
   "expensesTitle": "DESPESAS",
   "settingsTitle": "Configurações",
   "tabBuy": "Comprar",
