atlz nome do app

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "AUSGABEN",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Einstellungen",
   "tabBuy": "Kaufen",
   "tabPurchased": "Gekauft",
