--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "EXPENSES",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Settings",
   "tabBuy": "Buy",
   "tabPurchased": "Purchased",
