--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "GASTOS",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Configuración",
   "tabBuy": "Comprar",
   "tabPurchased": "Comprados",
