--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "DÉPENSES",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Paramètres",
   "tabBuy": "Acheter",
   "tabPurchased": "Achetés",
