--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "SPESE",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Impostazioni",
   "tabBuy": "Acquista",
   "tabPurchased": "Acquistati",
