--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "支出",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "設定",
   "tabBuy": "購入",
   "tabPurchased": "購入済み",
