--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "지출",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "설정",
   "tabBuy": "구매",
   "tabPurchased": "구매됨",
