--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "WYDATKI",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Ustawienia",
   "tabBuy": "Kup",
   "tabPurchased": "Kupione",
