--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "DESPESAS",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Configurações",
   "tabBuy": "Comprar",
   "tabPurchased": "Comprados",
