--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "РАСХОДЫ",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "Настройки",
   "tabBuy": "Купить",
   "tabPurchased": "Куплено",
