--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "支出",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "設定",
   "tabBuy": "購買",
   "tabPurchased": "已購買",
