--- a/lib/l10n/app_zh_Hans.arb
+++ b/lib/l10n/app_zh_Hans.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "MeuGasto",
-  "expensesTitle": "支出",
+  "expensesTitle": "MeuGasto",
   "settingsTitle": "设置",
   "tabBuy": "购买",
   "tabPurchased": "已购买",
